# generalised-nlp

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  example_template.ipynb  main.py  main_simple.py  main_wo_video.py  pyproject.toml  requirements.txt  spec-file.txt
analysis/: visualisation_class.py
cleaning/: pre_processing_class.py
config/: config.yaml
notebooks/: c19_app_reviews_exploration.ipynb  main.py  main_simple.py  main_wo_video.py
tests/: test_placeholder.py
tests/testthat/: test_code_tests_run.R
